[package]
name = "admin"
version = "0.1.0"
edition = "2018"

[dependencies]
# WARNING! ANY CRATE HERE NEEDS TO HAVE WASM SUPPORT
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }

[workspace]
members = ["server", "client"]
default-members = ["server"]
