[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
admin = { path = ".." }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
actix-web = "4.2.1"
actix-files = "0.6.2"
reqwest = { version = "0.11.13", features = ["cookies"] }
csv = "1.1.6"
